# otel_file_exporter

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
examples/: fastapi_app.py  fastapi_app_sqlite.py
src/otel_file_exporter/: __init__.py  otel.py
