[project]
name = "otel_file_exporter"
version = "0.1.0"
description = "Lightweight OpenTelemetry file exporter that writes traces, logs and metrics to local JSON Lines files"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-instrumentation-fastapi>=0.57b0",
    "opentelemetry-instrumentation-logging>=0.57b0",
    "opentelemetry-propagator-b3>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "uvicorn>=0.35.0",
]
